Name:                icontrib
Version:             0.0
Description:         Server for IContrib.org
License:             MIT
License-file:        LICENSE
Author:              IContrib.org
Maintainer:          greg@icontrib.org
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable icontrib
  Main-is:           Server.hs
  Build-Depends:     base >= 4 && < 5,
                     dataenc >= 0.14.0.3 && < 0.15,
                     json >= 0.5 && < 0.6,
                     derive >= 2.5.5,
                     acid-state >= 0.6.2 && < 0.7,
                     Crypto >= 4.2.4 && < 4.3,
                     cryptohash >= 0.7.4 && < 0.8,
                     happstack-server >= 6.5.6,
                     happstack-server-tls,
                     ixset,
                     hslogger,
                     SMTPClient,
                     MissingH,
                     email-validate,
                     HTTP >= 4000.2.2,
                     network >= 2.3.0.8,
                     safecopy >= 0.6.1 && < 0.7,
                     mtl >= 2.0.1.0 && < 2.1,
                     haskell98 >= 1.1.0.1 && < 1.2,
                     bytestring >= 0.9.1.10 && < 0.9.2,
                     containers >= 0.4.0.0 && < 0.5,
                     transformers >= 0.2.2.0 && < 0.3
