Name:                icontrib
Version:             0.0
Description:         Server for IContrib.org
License:             MIT
License-file:        LICENSE
Author:              IContrib.org
Maintainer:          greg@icontrib.org
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable icontrib
  Main-is:           Main.hs
  Build-Depends:     base >= 4,
                     dataenc >= 0.14.0.3,
                     json >= 0.5,
                     derive >= 2.5.5,
                     acid-state >= 0.6.2,
                     Crypto >= 4.2.4,
                     cryptohash >= 0.7.4,
                     happstack-server >= 6.5.6,
                     happstack-server-tls,
                     ixset,
                     hslogger,
                     SMTPClient,
                     MissingH,
                     email-validate,
                     HTTP >= 4000.2.2,
                     network >= 2.3.0.8,
                     safecopy >= 0.6.1,
                     mtl >= 2.0.1.0,
                     bytestring >= 0.9.1.10,
                     containers >= 0.4.0.0,
                     transformers >= 0.2.2.0,
                     old-locale >= 1.0.0.4,
                     time >= 1.4,
                     syb >= 0.3.6.1,
                     filepath >= 1.3,
                     random >= 1.0.1.1,
                     directory >= 1.1.0.2,
                     text >= 0.11.2,
                     blaze-html >= 0.5,
                     blaze-markup >= 0.5

